Text alignment/column fix

--- a/css/style.css
+++ b/css/style.css
@@ -63,9 +63,6 @@ cite {
   font-size: 18px;
 }
 
-figure {
-  padding: 0px;
-}
 
 .zoom {
   -webkit-transition: all .2s ease-in-out;
@@ -87,16 +84,13 @@ figure {
   padding: 10px;
 }
 
-.row {
-  padding: 10px;
-}
 
 .container{
-    padding:5%;
-    vertical-align: middle;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
+  padding:5%;
+  vertical-align: middle;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .container .img{
@@ -111,7 +105,7 @@ figure {
 }
 
 .blockquote {
-  padding: 10%;
+  padding: 5%;
 }
 
 .avatar {
@@ -178,7 +172,7 @@ figure {
 }
 
 .lead {
-  text-align: justify;
+  text-align: left;
   font-size: 18px;
 }
 
